removed local copies of laszip and nlohmann_json, and changed configuration to use them as external libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.24)
 set(CMAKE_SUPPRESS_REGENERATION true)
 
 project(PotreeConverter LANGUAGES CXX)
@@ -6,6 +6,20 @@ project(PotreeConverter LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
+
+
+################################################################################
+# Check for nlohmann_json
+################################################################################
+
+find_package(nlohmann_json CONFIG REQUIRED)
+
+################################################################################
+# Check for laszip
+################################################################################
+
+find_package(laszip CONFIG REQUIRED)
+
 
 #message(${PROJECT_SOURCE_DIR})
 
@@ -38,10 +52,6 @@ add_executable(PotreeConverter
 	${HEADER_FILES}
 )
 
-set(LASZIP_DIR "${PROJECT_SOURCE_DIR}/Converter/libs/laszip")
-add_subdirectory(${LASZIP_DIR})
-target_link_libraries(PotreeConverter laszip)
-
 set(BROTLI_DIR "${PROJECT_SOURCE_DIR}/Converter/libs/brotli")
 add_subdirectory(${BROTLI_DIR})
 target_link_libraries(PotreeConverter brotlienc-static)
@@ -70,20 +80,8 @@ endif (UNIX)
 add_custom_command(
 	TARGET PotreeConverter POST_BUILD
 	COMMAND ${CMAKE_COMMAND} -E copy
-		${LASZIP_DIR}/COPYING
-		$<TARGET_FILE_DIR:${PROJECT_NAME}>/licenses/license_laszip.txt)
-
-add_custom_command(
-	TARGET PotreeConverter POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy
 		${BROTLI_DIR}/LICENSE
 		$<TARGET_FILE_DIR:${PROJECT_NAME}>/licenses/license_brotli.txt)
-
-add_custom_command(
-	TARGET PotreeConverter POST_BUILD
-	COMMAND ${CMAKE_COMMAND} -E copy
-		${PROJECT_SOURCE_DIR}/Converter/libs/json/LICENSE
-		$<TARGET_FILE_DIR:${PROJECT_NAME}>/licenses/license_json.txt)
 
 add_custom_command(
 	TARGET PotreeConverter POST_BUILD
